main/default/objects/Jira_Fields_Mapping__c/Jira_Fields_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Jira Fields Mapping</label>
</CustomObject>