main/default/objects/Jira_Fields_Mapping__c/fields/Issue_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type_Id__c</fullName>
    <label>Issue Type Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>