main/default/objects/Jira_Fields_Mapping__c/fields/Jira_Field__c.field-meta.xml
<CustomField>
    <fullName>Jira_Field__c</fullName>
    <label>Jira Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>