main/default/objects/Jira_Fields_Mapping__c/fields/Log_Field__c.field-meta.xml
<CustomField>
    <fullName>Log_Field__c</fullName>
    <label>Log Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>